--- a/Pages/ProjectPage.xaml
+++ b/Pages/ProjectPage.xaml
@@ -2,16 +2,17 @@
 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 xmlns:uc="clr-namespace:Archivum">
-<Grid VerticalAlignment="Top" Margin="16">
+<Grid Margin="16">
 	<Grid.RowDefinitions>
-		<RowDefinition />
-		<RowDefinition />
-		<RowDefinition />
+		<RowDefinition Height="Auto"/>
+		<RowDefinition Height="96"/>
+		<RowDefinition Height="Auto"/>
+		<RowDefinition Height="*"/>
 	</Grid.RowDefinitions>
 	<!--Project Name-->
 	<uc:InputLine LabelText="Project name" Grid.Row="0"/>
 	<!--Project Options-->
-	<Grid Grid.Row="1" Height="96">
+	<Grid Grid.Row="1">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="1*"/>
 			<ColumnDefinition Width="3*"/>
@@ -22,8 +23,8 @@ xmlns:uc="clr-namespace:Archivum">
 				<RowDefinition/>
 				<RowDefinition/>
 			</Grid.RowDefinitions>
-			<uc:InputLine LabelText="Width" DefaultValue="16" IsNumeric="True" Grid.Row="0" />
-			<uc:InputLine LabelText="Height" DefaultValue="128" IsNumeric="True" Grid.Row="1" />
+			<uc:InputLine x:Name="WidthLine" LabelText="Width" DefaultValue="16" IsNumeric="True" Grid.Row="0" />
+			<uc:InputLine x:Name="HeightLine" LabelText="Height" DefaultValue="128" IsNumeric="True" Grid.Row="1" />
 		</Grid>
 		<!--Export Line-->
 		<Grid Grid.Column="1">
@@ -31,18 +32,19 @@ xmlns:uc="clr-namespace:Archivum">
 				<RowDefinition/>
 				<RowDefinition/>
 			</Grid.RowDefinitions>
-			<uc:InputLine LabelText="Code line" Grid.Row="0" />
+			<uc:InputLine x:Name="CodeLine" LabelText="Code line" Grid.Row="0"/>
 			<Grid Grid.Row="1">
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition/>
 					<ColumnDefinition/>
 				</Grid.ColumnDefinitions>
-				<uc:InputLine LabelText="X Placeholder" DefaultValue="X" Grid.Column="0" />
-				<uc:InputLine LabelText="Y Placeholder" DefaultValue="Y" Grid.Column="1" />
+				<uc:InputLine x:Name="XLine" LabelText="X Placeholder" DefaultValue="X" Grid.Column="0" />
+				<uc:InputLine x:Name="YLine" LabelText="Y Placeholder" DefaultValue="Y" Grid.Column="1" />
 			</Grid>
 		</Grid>
 	</Grid>
 	<!--User Paint Square-->
-	<Grid x:Name="CanvasHolder" Grid.Row="2"/>
+	<Grid x:Name="CanvasHolder" Grid.Row="2" Margin="8"/>
+	<TextBox x:Name="CodeHolder" IsReadOnly="True" Grid.Row="3" AcceptsReturn="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
 </Grid>
 </Page>
